# warlogs

./: .clang-format  .gitignore  CMakeLists.txt  main.c  makefile  warlogs.h  warlogs_test.c
.github/workflows/: cmake-single-platform.yml
include/warlogs/: event.hpp  types.hpp  utils.hpp
src/: event.cpp  utils.cpp
test/: CMakeLists.txt  event_parse.cpp  match.c  parse.c  parse_timestamp.c  utils.cpp
